--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container-benefits">
-    <div class="benefit-header">
+    <div class="block-header benefit-header">
         <h2>Why this is awesome</h2>
         <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
@@ -22,7 +22,7 @@
                     <i class="fa fa-lightbulb-o"></i>
                 </div>
             </div>
-            <p class="benefit-title">Thoughtful Design</p>
+            <p class="benefit-name">Thoughtful Design</p>
             <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit. Aenean euismod bibendum laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viverra.</p>
@@ -33,7 +33,7 @@
                     <i class="fa fa-keyboard-o"></i>
                 </div>
             </div>
-            <p class="benefit-title">Well Crafted</p>
+            <p class="benefit-name">Well Crafted</p>
             <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit. Aenean euismod bibendum laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viverra.</p>
@@ -44,10 +44,61 @@
                     <i class="fa fa-bolt"></i>
                 </div>
             </div>
-            <p class="benefit-title">Easy to Customize</p>
+            <p class="benefit-name">Easy to Customize</p>
             <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit. Aenean euismod bibendum laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viverra.</p>
+        </div>
+    </div>
+</div>
+
+<div class="container-price">
+    <div class="content-price">
+        <div class="block-header price-header ">
+            <h2>Pricing options</h2>
+            <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="prices">
+            <div class="pricing-slot">
+                <p class="price-info price-name">Basic</p>
+                <p class="price-info price-cost"><span class="currency">$</span>0</p>
+                <p class="price-info price-payment">Free for Life</p>
+                <ul class="price-features">
+                    <li class="price-feature">1 gb of space</li>
+                    <li class="price-feature">10 gb of bandwidth</li>
+                    <li class="price-feature">3 websites</li>
+                    <li class="price-feature">Basic Customization</li>
+                    <li class="price-feature">wordpress integration</li>
+                    <li class="price-feature">email support</li>
+                </ul>
+            </div>
+            <div class="pricing-slot">
+                <p class="price-info price-name">Professional</p>
+                <p class="price-info price-cost"><span class="currency">$</span>19</p>
+                <p class="price-info price-payment no-border">Monthly Payment</p>
+                <p class="price-popular">OUR MOST POPULAR</p>
+                <ul class="price-features">
+                    <li class="price-feature">5 gb of space</li>
+                    <li class="price-feature">50 gb of bandwidth</li>
+                    <li class="price-feature">12 websites</li>
+                    <li class="price-feature">Advanced Customization</li>
+                    <li class="price-feature">wordpress integration</li>
+                    <li class="price-feature">email support</li>
+                </ul>
+            </div>
+            <div class="pricing-slot">
+                <p class="price-info price-name">Enterprise</p>
+                <p class="price-info price-cost"><span class="currency">$</span>70</p>
+                <p class="price-info price-payment">Monthly Payment</p>
+                <ul class="price-features">
+                    <li class="price-feature">Unlimited space</li>
+                    <li class="price-feature">unlimited bandwidth</li>
+                    <li class="price-feature">100 websites</li>
+                    <li class="price-feature">Advanced Customization</li>
+                    <li class="price-feature">wordpress integration</li>
+                    <li class="price-feature">24/7 customer support</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
