--- a/index.html
+++ b/index.html
@@ -102,5 +102,47 @@
         </div>
     </div>
 </div>
+
+<div class="container-benefits">
+    <div class="block-header benefit-header">
+        <h2>Why this is awesome</h2>
+        <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div class="benefits">
+        <div class="single-benefit">
+            <div class="benefit-round">
+                <div class="benefit-icon">
+                    <i class="fa fa-lightbulb-o"></i>
+                </div>
+            </div>
+            <p class="benefit-name">Thoughtful Design</p>
+            <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Aenean euismod bibendum laoreet. Proin gravida
+                dolor sit amet lacus accumsan et viverra.</p>
+        </div>
+        <div class="single-benefit">
+            <div class="benefit-round">
+                <div class="benefit-icon">
+                    <i class="fa fa-keyboard-o"></i>
+                </div>
+            </div>
+            <p class="benefit-name">Well Crafted</p>
+            <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Aenean euismod bibendum laoreet. Proin gravida
+                dolor sit amet lacus accumsan et viverra.</p>
+        </div>
+        <div class="single-benefit">
+            <div class="benefit-round">
+                <div class="benefit-icon">
+                    <i class="fa fa-bolt"></i>
+                </div>
+            </div>
+            <p class="benefit-name">Easy to Customize</p>
+            <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Aenean euismod bibendum laoreet. Proin gravida
+                dolor sit amet lacus accumsan et viverra.</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
