--- a/index.html
+++ b/index.html
@@ -11,43 +11,45 @@
 </head>
 <body>
 <div class="container-benefits">
-    <div class="block-header benefit-header">
-        <h2>Why this is awesome</h2>
-        <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-    <div class="benefits">
-        <div class="single-benefit">
-            <div class="benefit-round">
-                <div class="benefit-icon">
-                    <i class="fa fa-lightbulb-o"></i>
-                </div>
-            </div>
-            <p class="benefit-name">Thoughtful Design</p>
-            <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Aenean euismod bibendum laoreet. Proin gravida
-                dolor sit amet lacus accumsan et viverra.</p>
+    <div class="content-benefits">
+        <div class="block-header benefit-header">
+            <h2>Why this is awesome</h2>
+            <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
-        <div class="single-benefit">
-            <div class="benefit-round">
-                <div class="benefit-icon">
-                    <i class="fa fa-keyboard-o"></i>
+        <div class="benefits">
+            <div class="single-benefit">
+                <div class="benefit-round">
+                    <div class="benefit-icon">
+                        <i class="fa fa-lightbulb-o"></i>
+                    </div>
                 </div>
+                <p class="benefit-name">Thoughtful Design</p>
+                <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Aenean euismod bibendum laoreet. Proin gravida
+                    dolor sit amet lacus accumsan et viverra.</p>
             </div>
-            <p class="benefit-name">Well Crafted</p>
-            <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Aenean euismod bibendum laoreet. Proin gravida
-                dolor sit amet lacus accumsan et viverra.</p>
-        </div>
-        <div class="single-benefit">
-            <div class="benefit-round">
-                <div class="benefit-icon">
-                    <i class="fa fa-bolt"></i>
+            <div class="single-benefit">
+                <div class="benefit-round">
+                    <div class="benefit-icon">
+                        <i class="fa fa-keyboard-o"></i>
+                    </div>
                 </div>
+                <p class="benefit-name">Well Crafted</p>
+                <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Aenean euismod bibendum laoreet. Proin gravida
+                    dolor sit amet lacus accumsan et viverra.</p>
             </div>
-            <p class="benefit-name">Easy to Customize</p>
-            <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Aenean euismod bibendum laoreet. Proin gravida
-                dolor sit amet lacus accumsan et viverra.</p>
+            <div class="single-benefit">
+                <div class="benefit-round">
+                    <div class="benefit-icon">
+                        <i class="fa fa-bolt"></i>
+                    </div>
+                </div>
+                <p class="benefit-name">Easy to Customize</p>
+                <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit. Aenean euismod bibendum laoreet. Proin gravida
+                    dolor sit amet lacus accumsan et viverra.</p>
+            </div>
         </div>
     </div>
 </div>
@@ -102,46 +104,60 @@
         </div>
     </div>
 </div>
+<div class="container-testimonials">
+    <div class="content-testimonials">
+        <div class="block-header testimonials-header">
+            <h2>WHAT OUR CUSTOMERS ARE SAYING</h2>
+            <p class="header-text" id="testimonial-header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="testimonials">
+            <div class="testimonial-single">
+                <div class="comment-bubble">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita
+                        repellat similique odio aspernatur ex, architecto eaque quo suscipit.</p>
+                </div>
+                <div class="testimonial-author">
+                    <div class="author-photo">
+                        <img src="images/avatar.png">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">Jeremy H.</p>
+                        <p class="author-job">Manager</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-single">
+                <div class="comment-bubble">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita
+                        repellat similique odio aspernatur ex, architecto eaque quo suscipit.</p>
+                </div>
+                <div class="testimonial-author">
+                    <div class="author-photo">
+                        <img src="images/avatar.png">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">John S.</p>
+                        <p class="author-job">Freelancer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-single">
+                <div class="comment-bubble">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita
+                        repellat similique odio aspernatur ex, architecto eaque quo suscipit.</p>
+                </div>
+                <div class="testimonial-author">
+                    <div class="author-photo">
+                        <img src="images/avatar.png">
+                    </div>
+                    <div class="author-info">
+                        <p class="author-name">Susan W.</p>
+                        <p class="author-job">Photographer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<div class="container-benefits">
-    <div class="block-header benefit-header">
-        <h2>Why this is awesome</h2>
-        <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-    <div class="benefits">
-        <div class="single-benefit">
-            <div class="benefit-round">
-                <div class="benefit-icon">
-                    <i class="fa fa-lightbulb-o"></i>
-                </div>
-            </div>
-            <p class="benefit-name">Thoughtful Design</p>
-            <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Aenean euismod bibendum laoreet. Proin gravida
-                dolor sit amet lacus accumsan et viverra.</p>
-        </div>
-        <div class="single-benefit">
-            <div class="benefit-round">
-                <div class="benefit-icon">
-                    <i class="fa fa-keyboard-o"></i>
-                </div>
-            </div>
-            <p class="benefit-name">Well Crafted</p>
-            <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Aenean euismod bibendum laoreet. Proin gravida
-                dolor sit amet lacus accumsan et viverra.</p>
-        </div>
-        <div class="single-benefit">
-            <div class="benefit-round">
-                <div class="benefit-icon">
-                    <i class="fa fa-bolt"></i>
-                </div>
-            </div>
-            <p class="benefit-name">Easy to Customize</p>
-            <p class="benefit-text">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Aenean euismod bibendum laoreet. Proin gravida
-                dolor sit amet lacus accumsan et viverra.</p>
-        </div>
     </div>
 </div>
 </body>
