--- a/index.html
+++ b/index.html
@@ -157,8 +157,17 @@
                 </div>
             </div>
         </div>
-
     </div>
+</div>
+<div class="button-container">
+    <div class="button-content">
+        <div class="block-header button-header ">
+            <h2>STYLISH AXURE DESIGN</h2>
+            <p class="header-text button-text">Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!</p>
+            <button>
+                <span class="download-btn">Download</span>
+            </button>
+        </div>
 </div>
 </body>
 </html>
