--- a/index.html
+++ b/index.html
@@ -165,8 +165,34 @@
             <h2>STYLISH AXURE DESIGN</h2>
             <p class="header-text button-text">Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!</p>
             <button>
-                <span class="download-btn">Download</span>
+                <span class="btn">Download</span>
             </button>
+        </div>
+    </div>
+</div>
+<div class="contact-content">
+        <div class="block-header">
+            <h2>CONTACT US</h2>
+            <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="form">
+            <form action="#" class="form-fields">
+                <div class="fields">
+                    <div class="fields_1">
+                        <input type="text" class="field_single" placeholder="Name">
+                        <input type="email" class="field_single" placeholder="Email">
+                        <input type="text" class="field_single" placeholder="Subject">
+                    </div>
+                    <div class="fields_2">
+                        <textarea class="field_single" placeholder="Message"></textarea>
+                    </div>
+                </div>
+                <div class="button-center">
+                    <button>
+                        <span class="btn">Send Message</span>
+                    </button>
+                </div>
+            </form>
         </div>
 </div>
 </body>
