--- a/index.html
+++ b/index.html
@@ -196,7 +196,18 @@
         </div>
 </div>
 <footer>
-
+    <div class="icons icons-block">
+        <a href="#" class="icons"><i class="fa fa-facebook-f"></i></a>
+        <a href="#" class="icons"><i class="fa fa-twitter"></i></a>
+        <a href="#" class="icons"><i class="fa fa-google-plus"></i></a>
+        <a href="#" class="icons"><i class="fa fa-pinterest"></i></a>
+        <a href="#" class="icons"><i class="fa fa-instagram"></i></a>
+        <a href="#" class="icons"><i class="fa fa-stumbleupon"></i></a>
+        <a href="#" class="icons"> <i class="fa fa-rss"></i></a>
+    </div>
+    <div class="copyright">
+        <p class="footer-text">© 2015 Axure Themes</p>
+    </div>
 </footer>
 </body>
 </html>
