--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
+<header>
+    <div class="header-content">
+        <div class="logo">
+            <img src="images/logo.png"/>
+        </div>
+        <div class="menu">
+            <ul>
+                <li>Features</li>
+                <li>About</li>
+                <li>Pricing</li>
+                <li>Reviews</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+    </div>
+</header>
 <div class="container-benefits">
     <div class="content-benefits">
         <div class="block-header benefit-header">
