--- a/index.html
+++ b/index.html
@@ -17,17 +17,50 @@
         </div>
         <div class="menu">
             <ul>
-                <li>Features</li>
-                <li>About</li>
-                <li>Pricing</li>
-                <li>Reviews</li>
-                <li>Contact</li>
+                <a href="#"><li>Features</li></a>
+                <a href="#about"><li>About</li></a>
+                <a href="#pricing"><li>Pricing</li></a>
+                <a href="#reviews"> <li>Reviews</li></a>
+                <a href="#contact"><li>Contact</li></a>
             </ul>
         </div>
     </div>
 </header>
+<div class="container-main">
+    <div class="content-main">
+        <div class="main-left">
+            <div class="main-header">
+                <div class="main-logo">
+                    <img src="images/logo_big.png"/>
+                </div>
+                <h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                    euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                    accumsan et viverra justo commodo.</h3>
+            </div>
+            <button>
+                <span class="btn">Download</span>
+            </button>
+        </div>
+        <div class="main-right">
+            <div class="main-form">
+                <form action="#">
+                    <div class="main-text">
+                        <p>Try Your <span>FREE</span> Trial Today</p>
+                    </div>
+                    <input type="text" class="field_single" placeholder="Name">
+                    <input type="email" class="field_single" placeholder="Email">
+                    <input type="password" class="field_single" placeholder="Password">
+                    <button>
+                        <span>Get Started</span>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="container-benefits">
-    <div class="content-benefits">
+    <div class="content-benefits" id="about">
         <div class="block-header benefit-header">
             <h2>Why this is awesome</h2>
             <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -71,7 +104,7 @@
 </div>
 
 <div class="container-price">
-    <div class="content-price">
+    <div class="content-price" id="pricing">
         <div class="block-header price-header ">
             <h2>Pricing options</h2>
             <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -121,7 +154,7 @@
     </div>
 </div>
 <div class="container-testimonials">
-    <div class="content-testimonials">
+    <div class="content-testimonials" id="reviews">
         <div class="block-header testimonials-header">
             <h2>WHAT OUR CUSTOMERS ARE SAYING</h2>
             <p class="header-text" id="testimonial-header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -176,7 +209,7 @@
     </div>
 </div>
 <div class="button-container">
-    <div class="button-content">
+    <div class="button-content" id="contact">
         <div class="block-header button-header ">
             <h2>STYLISH AXURE DESIGN</h2>
             <p class="header-text button-text">Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!</p>
