--- a/index.html
+++ b/index.html
@@ -59,6 +59,80 @@
         </div>
     </div>
 </div>
+<div class="container-social">
+    <div class="content-social">
+        <div class="social-text">
+        <p class="social-header">Social Media</p>
+        <p class="social-lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Aenean euismod bibendum laoreet.</p>
+        </div>
+        <div class="social-icons">
+            <a href="#" class="social-icon"><i class="fa fa-facebook-f"></i></a>
+            <a href="#" class="social-icon"><i class="fa fa-twitter"></i></a>
+            <a href="#" class="social-icon"><i class="fa fa-google-plus"></i></a>
+            <a href="#" class="social-icon"><i class="fa fa-pinterest"></i></a>
+            <a href="#" class="social-icon"><i class="fa fa-instagram"></i></a>
+            <a href="#" class="social-icon"><i class="fa fa-stumbleupon"></i></a>
+            <a href="#" class="social-icon"> <i class="fa fa-rss"></i></a>
+        </div>
+    </div>
+</div>
+<div class="container-tabs">
+    <div class="content-tabs">
+        <div class="tab-main">
+            <input type="radio" name="tabs" id="one" checked>
+            <input type="radio" name="tabs" id="two">
+            <input type="radio" name="tabs" id="three">
+            <div class="tabs">
+                <label class="tab _1" for="one"><span>TAB 1</span></label>
+                <label class="tab _2" for="two"><span>TAB 2</span></label>
+                <label class="tab _3" for="three"><span>TAB 3</span></label>
+            </div>
+            <div class="content-box">
+                <div class="content _1">
+                    <p class="tab-header">Tabs with soft transitioning effect.</p>
+                    <p class="tab-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                    <br><br>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.</p>
+                    <button>
+                        <span class="btn">Download</span>
+                    </button>
+                </div>
+                <div class="content _2">
+                    <p class="tab-header">Tabs with soft transitioning effect 2.</p>
+                    <p class="tab-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                        <br><br>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.</p>
+                    <button>
+                        <span class="btn">Download</span>
+                    </button>
+                </div>
+                <div class="content _3">
+                    <p class="tab-header">Tabs with soft transitioning effect 3.</p>
+                    <p class="tab-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                        <br><br>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.</p>
+                    <button>
+                        <span class="btn">Download</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <img src="images/town.png"/>
+    </div>
+</div>
 <div class="container-benefits">
     <div class="content-benefits" id="about">
         <div class="block-header benefit-header">
