--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="menu">
             <ul>
-                <a href="#"><li>Features</li></a>
+                <a href="#tabs"><li>Features</li></a>
                 <a href="#about"><li>About</li></a>
                 <a href="#pricing"><li>Pricing</li></a>
                 <a href="#reviews"> <li>Reviews</li></a>
@@ -78,7 +78,7 @@
     </div>
 </div>
 <div class="container-tabs">
-    <div class="content-tabs">
+    <div class="content-tabs" id="tabs">
         <div class="tab-main">
             <input type="radio" name="tabs" id="one" checked>
             <input type="radio" name="tabs" id="two">
